--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+  <div class="mobile-nav">
+  <button onclick="location.href='index.html'">Inicio</button>
+  <button onclick="location.href='componentes.html'">Componentes</button>
+  <button onclick="location.href='seguridad.html'">Seguridad</button>
+  <button onclick="location.href='tecnologias.html'">Tecnologías</button>
+  <button onclick="location.href='servicios.html'">Servicios</button>
+</div>
+
   <div class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('open')">
     ☰
   </div>
@@ -123,8 +131,12 @@
     function toggleSources() {
       const fuenteDiv = document.getElementById("fuentes");
       fuenteDiv.style.display = fuenteDiv.style.display === "none" ? "block" : "none";
+
     }
   </script>
+
+
+
 </body>
 <script>
   const toggleBtn = document.querySelector('.menu-toggle');
