--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
   </script>
 
 <div class="mobile-nav">
-  <button onclick="location.href='index.html'">Inicio</button>
-  <button onclick="location.href='componentes.html'">Componentes</button>
-  <button onclick="location.href='seguridad.html'">Seguridad</button>
-  <button onclick="location.href='tecnologias.html'">Tecnologías</button>
-  <button onclick="location.href='servicios.html'">Servicios</button>
+  <button onclick="location.href='index.html'" title="Inicio">🏠</button>
+  <button onclick="location.href='componentes.html'" title="Componentes">🧩</button>
+  <button onclick="location.href='seguridad.html'" title="Seguridad">🔒</button>
+  <button onclick="location.href='tecnologias.html'" title="Tecnologías">🛠️</button>
+  <button onclick="location.href='servicios.html'" title="Servicios">🌍</button>
 </div>
 
 
